# sluice-subnet-core

./: .env.example  .env.miner.example  .env.validator.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  start_miner.sh  start_validator.sh
agent/: Dockerfile  agent.py  entrypoint.sh  requirements.txt  router_manifest.template.json  runner.py
contrib/: CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md
docs/: developer_guide.md  miner_validator_guide.md  operating_a_sluice_like_app.md  running_on_mainnet.md  running_on_staging.md  running_on_testnet.md
docs/stream_tutorial/: config.py  miner.py
neurons/: miner.py  validator.py
scripts/: preflight_live.py  smoke_subnet_flow.py  start_testnet_pair.sh  status_testnet_pair.sh  stop_testnet_pair.sh
sluice/: agent_screener.py  benchmark_client.py  challenge_client.py  models.py  sandbox.py  scorer.py
sluice/benchmarks/: model_benchmarks.py  tasks.json
sluice/router/: __init__.py  artifacts.py  builder.py  cache.py  huggingface.py  publisher.py
sluice/validation/: __init__.py  manifests.py
sluice_subnet/: __init__.py  mock.py  protocol.py
sluice_subnet/api/: dummy.py
sluice_subnet/base/: miner.py  neuron.py  validator.py
sluice_subnet/utils/: config.py  uids.py
sluice_subnet/validator/: forward.py  reward.py
tests/: test_agent_runner.py  test_mock.py  test_neuron_bootstrap.py  test_router_artifacts.py  test_scorer.py  test_template_validator.py
