[tool.poetry]
name = "sluice-subnet"
version = "0.1.0"
description = "Bittensor subnet for competitive AI routing across cost, latency, quality, and privacy constraints."
authors = ["Sluice <team@sluice.local>"]
readme = "README.md"
packages = [
    { include = "neurons" },
    { include = "sluice" },
    { include = "sluice_subnet" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bittensor = "^10.1.0"
bittensor-cli = "^9.18.1"
docker = "^7.1.0"
httpx = "^0.27.0"
huggingface-hub = ">=0.23.0,<2"
numpy = "2.0.1"
pydantic = "^2.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.23.8"
ruff = "^0.4.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
sluice-validator = "neurons.validator:main"
sluice-miner = "neurons.miner:main"
sluice-build-router = "sluice.router.builder:main"
sluice-publish-router = "sluice.router.publisher:main"
validator = "neurons.validator:main"
miner = "neurons.miner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
